[tool.poetry]
name = "test-rhlf"
version = "0.1.0"
description = ""
authors = ["GabrielCarvalho <gabrielcarvalho.workk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = {extras = ["all"], version = "^0.115.5"}
pytest = "^8.3.3"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
